--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
-body{
+html, body, #root {
     background-color: black;
+    color: white;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.header {
+    display: flex ; justify-content: space-between; margin: 2rem;
+}
+
+.button-add button {
+    background: #2d9902;
+    color: white;
+    border: none;
+    padding: 10px 18px;
+    font-size: 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: 500;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+.button-add button:hover {
+    background: #0d7004d7;
+    transform: translateY(-2px);
+}
+
+.button-add button:active {
+    transform: scale(0.97);
 }
